done bean definition register